edycja grup i dodawanie grup